--- a/Team15091/src/main/AndroidManifest.xml
+++ b/Team15091/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
      So it won't ultimately be as empty as it might here appear to be :-) -->
 
 <!-- The package name here determines the package for your R class and your BuildConfig class -->
-<manifest
-    package="org.firstinspires.ftc.team15091"
+<manifest package="org.firstinspires.ftc.team15091"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <application/>
+
+    <application />
 </manifest>
